# roffl

./: .gitignore  Cargo.toml  README.md  default.nix  stable.nix
.github/workflows/: clippy.yml  nightly.yml  stable.yml
druid/: .gitrepo
druid/druid/src/widget/: textbox.rs
gui/: Cargo.toml
rofl_client/: Cargo.toml
rofl_gui/: Cargo.toml
rofl_proto/: Cargo.toml
rofl_server/: Cargo.toml
rofl_server/src/: lib.rs
spec/: spec.md
src/bridge/: Cargo.toml
src/bridge/src/: lib.rs  main.rs  protocol.rs  tcp.rs
src/client/: Cargo.toml
src/gui/: Cargo.toml  README.md
src/gui/src/: about_window.rs  assets.rs  main.rs  main_window.rs
src/gui/src/widgets/: borderless_textbox.rs  channel.rs  message_counter.rs  mod.rs  overlay.rs  panel.rs  panel2.rs  simple_progress_bar.rs  svg_button.rs
src/proto/: Cargo.toml
src/proto/src/: channel.rs  event.rs  lib.rs  message.rs  network.rs  timestamp.rs  types.rs
src/rcchat/: Cargo.toml
src/rcchat/src/: connection.rs  lib.rs  session_id.rs  transport.rs
src/rcchat/src/server/: config.rs
src/rcchat/src/store/: mod.rs
src/roffl/: Cargo.toml
src/roffl/src/: crypto.rs  lib.rs  transport.rs
src/roffl/src/client/: config.rs
src/roffl/src/server/: auth.rs
src/roffl/src/store/: sled.rs
src/server/: Cargo.toml
src/sntp_cached/: Cargo.toml  README.md
src/sntp_cached/examples/: drift.rs  periodic_sync.rs
src/sntp_cached/src/: lib.rs
tools/check_pr/: Cargo.toml
tools/make_release/: Cargo.toml
tools/make_release/src/: main.rs
