[package]
name = "rcchat-rs"
version = "0.1.0"
authors = ["Ed Cragg <drq.11235@gmail.com>"]
edition = "2018"
description = "rcchat, client and server library"

[dependencies]
rmp = "0.8.9"
rmp-serde = "0.14.2"
snow = "0.6.2"
blake3 = "0.1.5"
rust-argon2 = "0.8.0"
lazy_static = "1.4.0"
base64 = "0.11.0"
rand = "0.7.3"
sled = "0.31.0"
murmur3 = "0.5.1"
#growable-bloom-filter = "0.2.2"
hybrid-clocks = "0.5.3"
futures = "0.3.5"
rand_core = "0.5.1"

[dependencies.tokio]
version = "0.3.6"
features = ["macros", "net", "sync", "stream"]

[dependencies.tokio-util]
version = "0.3.1"
features = ["codec"]
