[package]
name = "roffl"
version = "0.1.0"
authors = ["Ed Cragg <drq.11235@gmail.com>"]
edition = "2018"
description = "roffl, client and server library"

[dependencies]
rmp = "0.8.9"
rmp-serde = "0.14.2"
snow = "0.6.2"
blake3 = "0.1.5"
rust-argon2 = "0.8.0"
lazy_static = "1.4.0"
base64 = "0.11.0"

[dependencies.tokio]
version = "0.2.11"
features = ["macros", "net"]
